# mlts

./: .gitattributes  .gitignore  Makefile  README.md  index.html  readme.html
app/: icon.icns  main.js  package.json
css/: main.css
docs/: CNAME  index.html  index.html~  readme.html
examples/: beta2.mlts  beta3.mlts  cbv.mlts  context.mlts  deb.mlts  (+19 more)
lib/: .merlin  .merlin~  Makefile  Makefile~  data.ml  data.mli  dune  elpi_string.ml  elpi_string.mli  index.html~  main.js  main.ml  main.ml~  pack_data.py  pack_data.py~  sync_core.sh  to_elpi.sh  to_elpi.sh~
lib/data/: lp-syntax.elpi  pervasives.elpi
lib/data/core/: builtins.elpi  control.mod  control.sig  datatypes.mod  datatypes.sig  debug.elpi  deprime.elpi  errors.elpi  errors.mod  errors.sig  eval.mod  eval.sig  eval.sig~  json.mod  json.sig  lists.mod  lists.mod~  lists.sig  misc-eval.mod  misc-eval.sig  progs.elpi  progs.mod  progs.sig  progs_gen.mod  progs_gen.sig  run.elpi  run.mod  run.mod~  run.sig  run.sig~  spy.mod  spy.sig  tests.elpi  tests.sig  typing.elpi  typing.mod  typing.sig  uprogs.mod  uprogs.sig  utils.mod  (+1 more)
lib/js/: type_parser.pegjs
lib/mlts_api/: .merlin  Makefile  Makefile~  _tags  arity.ml  astTools.ml  datatypes.ml  datatypes_eval.ml  datatypes_sig.ml  datatypes_translation.ml  datatypes_typeof.ml  dune  lpStrings.ml  mltsAst.ml  mltsLexer.mll  mltsParser.mly  mlts_API.ml  mlts_API.mli  mlts_API.ml~  mlts_API_test.ml  mlts_api.mli~  myocamlbuild.ml  prologAst.ml  prologPrinter.ml  prologTest.ml  sync.sh  tests.mlts  translator.ml  translator.ml~  valueLexer.mll  valueParser.mly
(+57 files in other folders)
