(copy_files# mlts_api/*.{ml,mli})

 
(executable
  (libraries 
    js_of_ocaml
    js_of_ocaml.ppx
    js_of_ocaml.weak
    elpi
    base64
  )
  (js_of_ocaml 
    (flags    (:standard +dynlink.js +toplevel.js))
  )
  (preprocess (pps js_of_ocaml.ppx))
  (link_flags (:standard -linkall))
  (flags      (:standard -g))
  (name main))

